# tilda

./: .pylintrc  Dockerfile  docker-compose.yml  entrypoint.sh  pytest.ini  requirements.txt  service.env.dist  setup.cfg  setup.py
src/webhook_api/: app_factory.py  config.py  decorators.py  ext.py  log.py  models.py  order_parser.py  parser.py
src/webhook_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/webhook_api/providers/: __init__.py  dummy.py  fxsmmsocpanel.py  justanotherpanel.py  prosmmstore.py  services.py  socproof.py  utils.py
tests/: test_api.py  test_config.py  test_dummy.py  test_order_parser.py  test_parser.py
tests/assets/: .gitignore
