## setup.cfg
## https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html
## https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
## PEP-517
## PEP-518

[metadata]
name = webhook-api
version = 0.1.0
description = Tilda Webhook API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/avalak-work/webhook-api
keywords = python, watchdog, flask
license = MIT
platforms = any

[options]
package_dir =
  = src
packages = find:
include_package_data = true
python_requires = >= 3.10
install_requires =
  cached_property; python_version < "3.8"
  flask==2.2.*
  flask-cors
  flask_sqlalchemy==3.*
  requests[socks]
  psycopg2-binary

[options.packages.find]
where=src

[options.extras_require]
gunicorn =
  gunicorn

tests =
  autopep8
  pytest
  pylint

[flake8]
max-complexity = 10
exclude = .git,__pycache__,.eggs,.tox,.pip,build,dist,venv
ignore = D203,F401,W292,E266,E501
